@@ -183,6 +183,7 @@ UConnection::initialize()
 	       customHeader);
 
   server->loadFile("CLIENT.INI", recvQueue_);
+  recvQueue_->push ("#__LINE__1\n");
   newDataAdded = true;
   return *this;
 }
