@@ -193,7 +193,10 @@ UServer::initialize()
 
   DEBUG (("Loading URBI.INI..."));
   if (loadFile("URBI.INI", &ghost_->recvQueue()) == USUCCESS)
+  {
     ghost_->newDataAdded = true;
+    ghost_->recvQueue().push ("#__LINE__1\n");
+  }
   DEBUG (("done\n"));
 }
 
@@ -526,6 +529,7 @@ UServer::work()
 
       //reload URBI.INI
       loadFile("URBI.INI", &ghost_->recvQueue());
+      ghost_->recvQueue().push ("#__LINE__1\n");
       char resetsignal[255];
       strcpy(resetsignal, "var __system__.resetsignal;");
       ghost_->recvQueue().push((const ubyte*)resetsignal, strlen(resetsignal));
@@ -541,6 +545,7 @@ UServer::work()
 	{
 	  (**i) << UConnection::send("*** Restart completed.\n", "reset");
 	  loadFile("CLIENT.INI", &(*i)->recvQueue());
+	  (*i)->recvQueue().push ("#__LINE__1\n");
 	  (*i)->newDataAdded = true;
 	  (**i) << UConnection::send("*** Ready.\n", "reset");
 	}
