@@ -1,5 +1,11 @@
 2007-10-12  Guillaume Deslandes  <deslandes@gostai.com>
 
+	Use #__LINE__ to reset line counter after autoloaded files
+	* src/uconnection.cc,
+	* src/userver.cc: Here.
+
+2007-10-12  Guillaume Deslandes  <deslandes@gostai.com>
+
 	Add #__LINE__ and #__FILE__ tokens to lexer
 	* src/parser/bison/utoken.l: Here.
 
